# tabla_documentos_rne

./: .gitignore  README.md  convert.py  pyproject.toml  rss.xml  script.ipynb
data/: fallos.txt  summary_documentosRNE.txt
